WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214267
Updated AudioContext constructor according to spec
https://bugs.webkit.org/show_bug.cgi?id=214267
Summary
Updated AudioContext constructor according to spec
Clark Wang
Reported
2020-07-13 12:50:25 PDT
Updated AudioContext constructor according to spec:
https://www.w3.org/TR/webaudio/#AudioContext-constructors
. Added in new files to support AudioContextOptions.
Attachments
Patch
(29.50 KB, patch)
2020-07-13 13:07 PDT
,
Clark Wang
no flags
Details
Formatted Diff
Diff
Patch
(29.52 KB, patch)
2020-07-13 16:10 PDT
,
Clark Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Clark Wang
Comment 1
2020-07-13 13:07:19 PDT
Created
attachment 404168
[details]
Patch
Chris Dumez
Comment 2
2020-07-13 13:29:59 PDT
Comment on
attachment 404168
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=404168&action=review
> Source/WebCore/Modules/webaudio/AudioContext.cpp:68 > + Optional<float> sampleRate = contextOptions.sampleRate;
This local variable is not needed.
> Source/WebCore/Modules/webaudio/AudioContext.cpp:78 > +AudioContext::AudioContext(Document& document, Optional<float> sampleRate)
I suggest passing the whole AudioContextOptions struct here.
> Source/WebCore/Modules/webaudio/BaseAudioContext.h:287 > explicit BaseAudioContext(Document&);
I suggest passing the whole AudioContextOptions struct here (with a default value): explicit BaseAudioContext(Document&, const AudioContextOptions& = { });
> Source/WebCore/Modules/webaudio/BaseAudioContext.h:289 > + BaseAudioContext(Document&, Optional<float>);
Let's not add yet another constructor.
> Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:49 > explicit DefaultAudioDestinationNode(BaseAudioContext&);
explicit DefaultAudioDestinationNode(BaseAudioContext&, Optional<float> = WTF::nullopt);
> Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.h:50 > + DefaultAudioDestinationNode(BaseAudioContext&, Optional<float>);
Let's not add another constructor.
> LayoutTests/imported/w3c/web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv-expected.txt:3 > +FAIL Executing "test" promise_test: Unhandled rejection with value: object "SyntaxError: sampleRate is not in range"
Why are we failing this?
Clark Wang
Comment 3
2020-07-13 16:10:35 PDT
Created
attachment 404191
[details]
Patch
EWS
Comment 4
2020-07-14 08:51:22 PDT
Committed
r264342
: <
https://trac.webkit.org/changeset/264342
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 404191
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-07-14 08:52:16 PDT
<
rdar://problem/65545259
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug